# neatroff

./: .gitignore  CMakeLists.txt  Makefile  README  adj.c  char.c  clr.c  cp.c  dev.c  dict.c  dir.c  draw.c  eval.c  fmt.c  font.c  hyen.h  hyph.c  in.c  iset.c  line.c  map.c  out.c  reg.c  ren.c  roff.c  roff.h  sbuf.c  tr.c  wb.c  xroff.c  xroff.h
.github/workflows/: ci.yaml
